--- a/.github/workflows/abi-compatibility.yml
+++ b/.github/workflows/abi-compatibility.yml
@@ -14,7 +14,7 @@
 # limitations under the License.
 name: abi-compatibility
 
-on: [push, pull_request]
+on: [pull_request]
 #on:
 #  push:
 #    branches:
